# jsondata

./: .gitignore  Makefile.am  configure.ac  jsondata.c  jsondata.pc.in
debian/: control  libjsondata-dev.dirs  libjsondata-dev.install
